# legacy-cpp-framework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  build.bat
cmake/: cmakemake
cmake/modules/: config.cmake  library.cmake  link_project.cmake
cmake/toolchain/: android.toolchain.cmake  iOS.cmake
pinvoke/: CMakeLists.txt  Uno.Native.sln  Uno.Native.snk  build.bat  build.sh  gen.sh  pack.sh
pinvoke/Uno.Native/: IOHelper.cs  Mac.cs  NativeException.cs  NativeLib.cs  NativeLib.uPInvoke.cs  NativeObject.cs  PlatformDetection.cs  Uno.Native.csproj  Win32.cs
pinvoke/Uno.Native.Tests/: Program.cs  Uno.Native.Tests.csproj
pinvoke/Uno.Native.Tests/Properties/: AssemblyInfo.cs
pinvoke/Uno.Native/Fonts/: FontFace.cs  FontFaceInfo.cs  FontGlyphInfo.cs  FontKerningInfo.cs  FontLineMetricInfo.cs  FontRenderMode.cs  RenderedGlyph.cs
pinvoke/Uno.Native/Properties/: AssemblyInfo.cs
pinvoke/Uno.Native/Textures/: Cube2DMode.cs  PixelFormat.cs  Texture.cs  TextureInfo.cs  TextureType.cs
pinvoke/uPInvoke/: API.cpp  API.h  CMakeLists.txt  FontFace.cpp  Texture.cpp
scripts/: pack.sh  upload.sh
scripts/unicode/: make_case_conversion.py
src/: _doxygen.h
src/GLEW/: CMakeLists.txt
src/SDL2/: CMakeLists.txt
src/XliHttpClient/: CMakeLists.txt  HttpClient.h
src/XliHttpClient/curl/: CurlHttpClient.cpp  CurlHttpClient.h
src/XliHttpClient/dummy/: DummyHttp.cpp
src/XliMain/: CMakeLists.txt  Main.cpp
src/XliPlatform/: Application.cpp  Application.h  CMakeLists.txt  CommonDialogs.h  Display.h  GL.h  GLContext.cpp  GLContext.h  MessageBox.h  PlatformLib.cpp  PlatformLib.h  Window.cpp  Window.h
src/XliPlatform/PlatformSpecific/: Android.h  SDL2.h  Win32.h  iOS.h
src/XliPlatform/android/: ADisplay.cpp  AInternal.h  AJniHelper.cpp  AJniHelper.h  ALogStream.cpp  ALogStream.h  AMessageBox.cpp  AWindow.cpp  EGLContext.cpp
src/XliPlatform/dummy/: DummyDisplay.cpp  DummyGLContext.cpp  DummyWindow.cpp
src/XliPlatform/generic/: GenericDialogs.cpp  GenericMessageBox.cpp
src/XliPlatform/ios/: iOSDisplay.mm  iOSInit.mm
src/XliPlatform/sdl2/: SDL2Display.cpp  SDL2Display_OSX.mm  SDL2GLContext.cpp  SDL2MessageBox.cpp  SDL2Window.cpp  SDL2Window.h  SDL2Window_iOS.mm
src/XliPlatform/win32/: Win32.cpp  Win32Dialogs.cpp  Win32Display.cpp  Win32GLContext.cpp  Win32MessageBox.cpp  Win32Window.cpp  Win32Window.h
src/XliSoundPlayer/: CMakeLists.txt  SoundPlayer.h
src/XliSoundPlayer/coreaudio/: CoreSoundDelegate.h  CoreSoundPlayer.mm
src/XliSoundPlayer/dummy/: DummySoundPlayer.cpp
src/XliSoundPlayer/opensles/: SlesSoundPlayer.cpp  SlesSoundPlayer.h
src/curl/: CMakeLists.txt
src/freetype/: CMakeLists.txt
src/jpeg/: CMakeLists.txt
src/png/: CMakeLists.txt
src/uBase/: Array.h  ArrayStream.cpp  ArrayStream.h  Atomic.h  BaseLib.cpp  BaseLib.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Buffer.cpp  Buffer.h  BufferStream.cpp  BufferStream.h  Bundle.h  CMakeLists.txt  Config.h  Console.h  DateTime.cpp  DateTime.h  Disk.h  Exception.cpp  Exception.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  HashMap.h  Memory.h  Object.cpp  Object.h  Path.cpp  Path.h  Random.cpp  Random.h  Sort.h  Stream.cpp  Stream.h  String.cpp  String.h  (+24 more)
src/uBase/android/: AndroidFileSystem.cpp
src/uBase/apple/: AppleFileSystem.mm
src/uBase/generic/: GenericBundle.cpp
src/uBase/linux/: LinuxFileSystem.cpp
src/uBase/unix/: UnixFileSystem.cpp  UnixFileSystem.h  UnixThread.cpp  UnixTime.cpp
src/uBase/win32/: Win32FileSystem.cpp  Win32Thread.cpp  Win32Time.cpp
src/uImage/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  CompressedImage.cpp  CompressedImage.h  FontFace.cpp  FontFace.h  Format.cpp  Format.h  Image.h  ImageIO.cpp  ImageIO.h  Jpeg.cpp  Jpeg.h  Ktx.cpp  Ktx.h  Png.cpp  Png.h  ProgressCallback.h  Rectangle.h  Texture.cpp  Texture.h  UIImageReader.mm
src/z/: CMakeLists.txt
tests/: CMakeLists.txt
tests/uBase/: DateTime_test.cpp  ExampleImage.h  Image_test.cpp  String_test.cpp  Unicode_test.cpp  Uri_test.cpp
