project("uno-base")
cmake_minimum_required(VERSION 2.8)

include(cmake/modules/library.cmake)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${LIBRARY_OUTPUT_PATH})

if (APPLE)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-switch-enum -Wno-logical-op-parentheses -Wno-parentheses-equality -Wno-extra-tokens -Wno-deprecated-declarations")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch-enum -Wno-logical-op-parentheses -Wno-parentheses-equality")
endif()

add_subdirectory(src/curl)
add_subdirectory(src/freetype)
add_subdirectory(src/GLEW)
add_subdirectory(src/jpeg)
add_subdirectory(src/png)
add_subdirectory(src/SDL2)
add_subdirectory(src/z)
add_subdirectory(src/uBase)
add_subdirectory(src/uImage)
add_subdirectory(src/XliHttpClient)
add_subdirectory(src/XliMain)
add_subdirectory(src/XliPlatform)
add_subdirectory(src/XliSoundPlayer)
