#if (OSX)
#    file(COPY /usr/local/include/GL/glew.h DESTINATION ${PROJECT_SOURCE_DIR}/include/GL)
#    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
#        /usr/local/lib/libGLEW.a ${LIBRARY_OUTPUT_PATH}/libGLEW.a)
#elseif (WIN32)
if (WIN32 OR OSX)
    add_definitions(-DGLEW_STATIC)
    include_directories(../../3rdparty/glew/include)
    add_library(GLEW STATIC ../../3rdparty/glew/src/glew.c)
    file(COPY ${PROJECT_SOURCE_DIR}/3rdparty/glew/include/GL/glew.h DESTINATION ${PROJECT_SOURCE_DIR}/include/GL)
    if (WIN32)
        file(COPY ${PROJECT_SOURCE_DIR}/3rdparty/glew/include/GL/wglew.h DESTINATION ${PROJECT_SOURCE_DIR}/include/GL)
    endif()
endif()
